[project]
name = "pycop"
version = "0.0.8"
description = "Copula for multivariate dependence modeling"
authors = [
    { name = "Maxime N", email = "maxime.nlc@proton.me" },
]
license = { file = "LICENSE" }
readme = "README.md"
python = "^3.6"
dependencies = [
    numpy,
    pandas,
    scipy,
    matplotlib
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"